# matmul

./: .gitattributes  Makefile  README.md
data/n_000_shapes_2_4_4_2/: A.npy  B.npy  C.npy  params.json
data/n_001_shapes_4_4_4_4/: A.npy  B.npy  C.npy  params.json
data/n_002_shapes_4_8_8_4/: A.npy  B.npy  C.npy  params.json
data/n_003_shapes_8_8_8_8/: A.npy  B.npy  C.npy  params.json
data/n_004_shapes_8_16_16_8/: A.npy  B.npy  C.npy  params.json
data/n_005_shapes_16_16_16_16/: A.npy  B.npy  C.npy  params.json
data/n_006_shapes_16_32_32_16/: A.npy  B.npy  C.npy  params.json
data/n_007_shapes_32_32_32_32/: A.npy  B.npy  C.npy  params.json
data/n_008_shapes_32_64_64_32/: A.npy  B.npy  C.npy  params.json
data/n_009_shapes_64_64_64_64/: A.npy  B.npy  C.npy  params.json
data/n_010_shapes_64_128_128_64/: A.npy  B.npy  C.npy  params.json
data/n_011_shapes_128_128_128_128/: A.npy  B.npy  C.npy  params.json
data/n_012_shapes_128_256_256_128/: A.npy  B.npy  C.npy  params.json
logs/: python-loop_interchange_numba.json  python-naive.json  python-naive_numba.json  python-numpy_dot_OPENBLAS_NUM_THREADS=1.json  python-numpy_dot_OPENBLAS_NUM_THREADS=4.json  rust-loop_interchange.json  rust-loop_interchange_iterators.json  rust-loop_interchange_uncheck.json  rust-naive.json
notebooks/: BENCHMARK.md  results.ipynb
python/: pyproject.toml
python/src/: __main__.py
python/src/matmul/: __init__.py  loop_interchange_numba.py  naive.py  naive_numba.py  numpy_dot.py
python/tests/: test_matmul.py
rust/: Cargo.toml  ll
rust/src/: main.rs  (+3 more)
utils/: data_gen.py
(+19 files in other folders)
