[tool.poetry]
name = "python-matmul"
version = "0.1.0"
description = ""
authors = ["martins0n <martinmail@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
typer = "^0.4.0"
numba = "^0.54.0"
numpy = "*"
matplotlib = "^3.4.3"
pytest = "^6.2.5"
tqdm = "^4.62.3"
loguru = "^0.5.3"
jupyter = "^1.0.0"
black = "^21.9b0"
seaborn = "^0.11.2"
isort = "^5.9.3"
tabulate = "^0.8.9"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
